--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
        
       <p class="author">By Joseph Franco</p>
       
-      <p class="article">Hello Guys, My name is Joseph and I want to make a game, I would like to call it Dig and Create. Its a sandbox game that is voxel based. And no im not trying to compete with Minecraft. So mojang, dont take this down. Its going to be like survival with farm animals and wild life. it will be like real life. and you survive and kill. I am wanting to make a team. A team that is willing to help and put in the work to create this game. And no, it wont cost you a dime!</p>
+      <p class="article">Hello Guys, My name is Joseph and I want to make a game, I would like to call it Dig and Create. Its a sandbox game that is voxel based. And no im not trying to compete with Minecraft. So mojang, dont take this down. Its going to be like survival with farm animals and wild life. it will be like real life. and you survive and kill. I am wanting to make a team. A team that is willing to help and put in the work to create this game. And no, it wont cost you a dime! It will be made with Eclipse IDE for java developers, Java.</p>
   <div class="contact"><p class="contact">Contact me for more info @joseph.1555235@nv.ccsd.net</p></div>
+  
+  
   </body>
 </html>
